--- a/index.Rmd
+++ b/index.Rmd
@@ -276,19 +276,19 @@ the current revision.
   **Week 2**
     Lecture                         Descriptive statistics for categorical variables
     Class                           Introduction to SPSS. Descriptive statistics for categorical variables
-    Coursepack                      Sections \@ref(s_descr1_intro)–\@ref(s_descr1_2cat) and \@ref(s_descr1-presentation)
+    Coursepack                      Sections \@ref(s-descr1-intro)–\@ref(s-descr1-2cat) and \@ref(s-descr1-presentation)
 
   **Week 3**
     Lecture & Class                 Descriptive statistics for continuous variables
-    Coursepack                      Sections \@ref(s_descr1_1cont)–\@ref(s_descr1-2cont)
+    Coursepack                      Sections \@ref(s-descr1-1cont)–\@ref(s-descr1-2cont)
 
   **Week 4**
     Lecture & Class                 Analysis of two-way contingency tables
-    Coursepack                      Chapters \@ref(c_samples) and \@ref(c-tables)
+    Coursepack                      Chapters \@ref(c-samples) and \@ref(c-tables)
 
   **Week 5**
     Lecture & Class                 Inference for means in two populations
-    Coursepack                      Chapters \@ref(c_contd) and \@ref(c-means)
+    Coursepack                      Chapters \@ref(c-contd) and \@ref(c-means)
 
   **Week 6**
     Reading Week                    **No lecture, no class**. Revision quiz available on Moodle.
@@ -299,18 +299,18 @@ the current revision.
 
   **Week 8**
     Lecture & Class                 Correlation and simple linear regression as descriptive methods
-    Coursepack                      Sections \@ref(s_regression_intro)–\@ref(ss_regression_simple-est)
+    Coursepack                      Sections \@ref(s-regression-intro)–\@ref(ss-regression-simple-est)
 
   **Week 9**
     Lectures          
     Hour 1                          Inference for the simple linear regression model
     Hour 2                          Three-way contingency tables
     Class                           Simple linear regression
-    Coursepack                      Section \@ref(ss_regression_simple_inf) (Hour 1); Section \@ref(s_regression_causality) and Chapter \@ref(c-3waytables) (Hour 2)
+    Coursepack                      Section \@ref(ss-regression-simple-inf) (Hour 1); Section \@ref(s-regression-causality) and Chapter \@ref(c-3waytables) (Hour 2)
 
   **Week 10**
     Lecture & Class                 Multiple linear regression
-    Coursepack                      Sections \@ref(s_regression_multiple)–\@ref(s_regression-rest)
+    Coursepack                      Sections \@ref(s-regression-multiple)–\@ref(s-regression-rest)
 
   **Week 11**
     Lecture                         Review and further statistical methods
