--- a/04-MY451_4.rmd
+++ b/04-MY451_4.rmd
@@ -4,13 +4,13 @@
 
 In this section we continue the discussion of methods of analysis for
 two-way contingency tables that was begun in Section
-\@ref(ss_descr1_2cat-tables). We will use again the example from the
+\@ref(ss-descr1-2cat-tables). We will use again the example from the
 European Social Survey that was introduced on page
 \pageref{p_ess_example}. The two variables in the example are a person’s
 sex and his or her attitude toward income redistribution measured as an
 ordinal variable with five levels. The two-way table of these variables
 in the sample is shown again for convenience in Table
-\@ref(t_sex_attitude-ch4), including both the frequencies and the
+\@ref(t-sex-attitude-ch4), including both the frequencies and the
 conditional proportions for attitude given sex.
 
   ----------------------------------------------------------------------- ----------------------------------------------------------------------- --------- --------------- ---------- ---------- -------
@@ -29,7 +29,7 @@ conditional proportions for attitude given sex.
   conditional proportions of attitude given sex. Data: European Social Survey, Round 5, 2010, UK respondents only.<span
   data-label="t_sex_attitude_ch4"></span>
 
-Unlike in Section \@ref(ss_descr1_2cat-tables), we will now go beyond
+Unlike in Section \@ref(ss-descr1-2cat-tables), we will now go beyond
 description of sample distributions and into statistical inference. The
 observed data are thus treated as a sample from a population, and we
 wish to draw conclusions about the population distributions of the
@@ -51,7 +51,7 @@ appearances of the same concepts in different contexts. It will then not
 be necessary to restate the basic ideas of the tools of inference in
 similar detail. A short summary of the $\chi^{2}$ test considered in
 this chapter is given again at the end of the chapter, in Section
-\@ref(s_tables-summary).
+\@ref(s-tables-summary).
 
 ## Significance tests {#s_tables_tests}
 
@@ -70,9 +70,9 @@ either “Yes, it is” or “No, it isn’t”.
 
 In trying to answer such questions, we are faced with the complication
 that we only have information from a sample. For example, in Table
-\@ref(t_sex_attitude-ch4) the conditional distributions of attitude are
+\@ref(t-sex-attitude-ch4) the conditional distributions of attitude are
 certainly not identical for men and women. According to the definition
-in Section \@ref(ss_descr1_2cat-assoc), this shows that sex and attitude
+in Section \@ref(ss-descr1-2cat-assoc), this shows that sex and attitude
 are associated *in the sample*. This, however, does not prove that they
 are also associated *in the population*. Because of sampling variation,
 the two conditional distributions are very unlike to be exactly
@@ -259,7 +259,7 @@ between research hypotheses and statistical hypotheses:
 
 In the following discussion we will sometimes refer to Figure
 \@ref(f-spsschi2), which shows SPSS output for the $\chi^{2}$ test of
-independence for the data in Table \@ref(t_sex_attitude-ch4). Output for
+independence for the data in Table \@ref(t-sex-attitude-ch4). Output for
 the test is shown on the line labelled “Pearson Chi-Square”, and “N of
 valid cases” gives the sample size $n$. The other entries in the table
 are output for other tests that are not discussed here, so they can be
@@ -267,7 +267,7 @@ ignored.
 
 ![SPSS output of the $\chi^{2}$ test of independence (here labelled
 “Pearson Chi-square”) for the data in Table
-\@ref(t_sex_attitude-ch4).<span
+\@ref(t-sex-attitude-ch4).<span
 data-label="f_spsschi2"></span>](chi2test_ess){width="100mm"}
 
 When we apply any significance test, we need to be aware of its
@@ -317,14 +317,14 @@ A **test statistic** is a number calculated from the sample (i.e. a
 statistic in the sense defined on page \pageref{p_statistic}) which is
 used to test a null hypothesis. We we will describe the calculation of
 the $\chi^{2}$ test statistic step by step, using the data in Table
-\@ref(t_sex_attitude-ch4) for illustration. All of the elements of the
+\@ref(t-sex-attitude-ch4) for illustration. All of the elements of the
 test statistic for this example are shown in Table
-\@ref(t_sex_attitude-chi2). These elements are
+\@ref(t-sex-attitude-chi2). These elements are
 
 -   The **observed frequencies**, denoted $f_{o}$, one for each cell of
     the table. These are simply the observed cell counts (compare the
-    $f_{o}$ column of Table \@ref(t_sex_attitude-chi2) to the counts in
-    Table \@ref(t_sex_attitude-ch4)).
+    $f_{o}$ column of Table \@ref(t-sex-attitude-chi2) to the counts in
+    Table \@ref(t-sex-attitude-ch4)).
 
 -   The **expected frequencies** $f_{e}$, also one for each cell. These
     are cell counts in a hypothetical table which would show no
@@ -332,7 +332,7 @@ test statistic for this example are shown in Table
     table for a sample which would exactly agree with the null
     hypothesis of independence in the population. To explain how the
     expected frequencies are calculated, consider the cell in Table
-    \@ref(t_sex_attitude-ch4) for Male respondents who strongly agree
+    \@ref(t-sex-attitude-ch4) for Male respondents who strongly agree
     with the statement. As discussed above, if the null hypothesis of
     independence is true in the population, then the conditional
     probability of strongly agreeing is the same for both men and women.
@@ -340,7 +340,7 @@ test statistic for this example are shown in Table
     overall (marginal) probability of strongly agreeing. The sample
     version of this is that the proportion who strongly agree should be
     the same for men as among all respondents overall. This overall
-    proportion in Table \@ref(t_sex_attitude-ch4) is $366/2344=0.156$. If
+    proportion in Table \@ref(t-sex-attitude-ch4) is $366/2344=0.156$. If
     this proportion applied also to the 1027 male respondents, the
     number of of them who strongly agreed would be
     $$f_{e} = \left(\frac{366}{2344}\right)\times 1027 =
@@ -365,7 +365,7 @@ test statistic for this example are shown in Table
     differences themselves, because positive ($f_{o}$ is larger than
     $f_{e}$) and negative ($f_{o}$ is smaller than $f_{e}$) differences
     will always exactly cancel each other out (c.f. their sum on the
-    last row of Table \@ref(t_sex_attitude-chi2)). Instead,
+    last row of Table \@ref(t-sex-attitude-chi2)). Instead,
     we consider...
 
 -   ...the squared differences $(f_{o}-f_{e})^{2}$. This removes the
@@ -402,14 +402,14 @@ test statistic for this example are shown in Table
   ---------------------------- ---------- --------- --------- --------------- --------------------- ---------------------------
 
   : Calculating the $\chi^{2}$ test statistic for Table
-  \@ref(t_sex_attitude-ch4). In the second column, SA, A, 0, D, and SD
+  \@ref(t-sex-attitude-ch4). In the second column, SA, A, 0, D, and SD
   are abbreviations for Strongly agree, Agree, Neither agree nor
   disagree, Disagree and Strongly disagree respectively.<span
   data-label="t_sex_attitude_chi2"></span>
 
 The calculations can be done even by hand, but we will usually leave
-them to a computer. The last column of Table \@ref(t_sex_attitude-chi2)
-shows that for Table \@ref(t_sex_attitude-ch4) the test statistic is
+them to a computer. The last column of Table \@ref(t-sex-attitude-chi2)
+shows that for Table \@ref(t-sex-attitude-ch4) the test statistic is
 $\chi^{2}=18.81$ (which includes some rounding error, the correct value
 is 18.862). In the SPSS output in Figure \@ref(f-spsschi2), it is given
 in the “Value” column of the “Pearson Chi-Square” row.
@@ -476,7 +476,7 @@ However, we also realise that this value would have been different if
 the sample had been different, and also that the sample could indeed
 have been different because the sampling is a process that involves
 randomness. For example, in the actually observed sample in Table
-\@ref(t_sex_attitude-ch4) we had 200 men who disagreed with the statement
+\@ref(t-sex-attitude-ch4) we had 200 men who disagreed with the statement
 and 41 who strongly disagreed with it. It is easily imaginable that
 another random sample of 2344 respondents from the same population could
 have given us frequencies of, say, 195 and 46 for these cells instead.
@@ -485,7 +485,7 @@ been 19.75 instead of 18.86. Furthermore, it also seems intuitively
 plausible that not all such alternative values are equally likely for
 samples from a given population. For example, it seems quite improbable
 that the population from which the sample in Table
-\@ref(t_sex_attitude-ch4) was drawn would instead produce a sample which
+\@ref(t-sex-attitude-ch4) was drawn would instead produce a sample which
 also had 1027 men and 1317 women but where all the men strongly
 disagreed with the statement (which would yield $\chi^{2}=2210.3$).
 
@@ -543,7 +543,7 @@ for carrying out a significance test.
 For the $\chi^{2}$ test, we need the sampling distribution of the test
 statistic (\@ref(chi2)) under the independence null hypothesis
 (\@ref(H0-chi2)). To make these ideas a little more concrete, the upper
-part of Table \@ref(t_sex_attitude-H0pop) shows the crosstabulation of
+part of Table \@ref(t-sex-attitude-H0pop) shows the crosstabulation of
 sex and attitude in our example for a finite population where the null
 hypothesis holds. We can see that it does because the two conditional
 distributions for attitude, among men and among women, are the same
@@ -593,7 +593,7 @@ the real sample that we have actually observed.
 In the example we have a sample of 2344 observations, so to match that
 we want to identify the sampling distribution of the $\chi^{2}$
 statistic in random samples of size 2344 from the population like the
-one in the upper part of Table \@ref(t_sex_attitude-H0pop). The lower
+one in the upper part of Table \@ref(t-sex-attitude-H0pop). The lower
 part of that table shows one such sample. Even though it comes from a
 population where the two variables are independent, the same is not
 exactly true in the sample: we can see that the conditional sample
@@ -615,7 +615,7 @@ superficially and only to the extent that is absolutely necessary.
 
 Figure \@ref(f-chisampld) shows what we observe if do a computer
 simulation to draw many more samples from the population in Table
-\@ref(t_sex_attitude-H0pop). The figure shows the histogram of the values
+\@ref(t-sex-attitude-H0pop). The figure shows the histogram of the values
 of the $\chi^{2}$ test statistic calculated from 100,000 such samples.
 We can see, for example, that $\chi^{2}$ is between 0 and 10 for most of
 the samples, and larger than that for only a small proportion of them.
@@ -627,7 +627,7 @@ drawn from a population where the null hypothesis of independence holds.
 for independence. The plot shows a histogram of the values of the
 statistic in 100,000 simulated samples of size $n=2344$ drawn from the
 population distribution in the upper part of Table
-\@ref(t_sex_attitude-H0pop). Superimposed on the histogram is the curve
+\@ref(t-sex-attitude-H0pop). Superimposed on the histogram is the curve
 of the approximate sampling distribution, which is the $\chi^{2}$
 distribution with 4 degrees of freedom. <span
 data-label="f_chisampld"></span>](chi2sims){width="8.5cm"}
@@ -666,7 +666,7 @@ result:
 
 The degrees of freedom are thus given by the number of rows in the table
 minus one, multiplied by the number of columns minus one. Table
-\@ref(t_sex_attitude-ch4), for example, has $R=2$ rows and $C=5$ columns,
+\@ref(t-sex-attitude-ch4), for example, has $R=2$ rows and $C=5$ columns,
 so its degrees of freedom are $df=(2-1)\times(5-1)=4$ (as indicated by
 the “df” column of the SPSS output of Figure \@ref(f-spsschi2)). Figure
 \@ref(f-chisampld) shows the curve of the $\chi^{2}$ distribution with
@@ -735,7 +735,7 @@ Figure \@ref(f-pvalchisq) illustrates this calculation. It shows the
 curve of the $\chi^{2}_{4}$ distribution, which is the relevant sampling
 distribution for the test for the $2\times 5$ table in our example.
 Suppose first, hypothetically, that we had actually observed the sample
-in the lower part of Table \@ref(t_sex_attitude-H0pop), for which the
+in the lower part of Table \@ref(t-sex-attitude-H0pop), for which the
 value of the test statistic is $\chi^{2}=2.84$. The $P$-value of the
 test for this sample would then be the probability of values of 2.84 or
 larger, evaluated from the $\chi^{2}_{4}$ distribution.
@@ -749,7 +749,7 @@ $\chi^{2}=2.84$ is the area under the curve to the right of the value
 2.84, which is shown in grey in Figure \@ref(f-pvalchisq). This is
 $P=0.585$.
 
-The test statistic for the real sample in Table \@ref(t_sex_attitude-ch4)
+The test statistic for the real sample in Table \@ref(t-sex-attitude-ch4)
 was $\chi^{2}=18.86$, so the $P$-value is the combined probability of
 this and all larger values. This is also shown in Figure
 \@ref(f-pvalchisq). However, this area is not really visible in the plot
@@ -811,11 +811,11 @@ statistic was 9.49, $P$ would be 0.050.
 
 The values in the table also provide bounds for other values that are
 not shown. For instance, in the hypothetical sample in Table
-\@ref(t_sex_attitude-H0pop) we had $\chi^{2}=2.84$, which is smaller than
+\@ref(t-sex-attitude-H0pop) we had $\chi^{2}=2.84$, which is smaller than
 7.78. This implies that the corresponding $P$-value must be larger than
 0.100, which (of course) agrees with the precise value of $P=0.585$ (see
 also Figure \@ref(f-pvalchisq)). Similarly, $\chi^{2}=18.86$ for the real
-data in Table \@ref(t_sex_attitude-ch4), which is larger than the 18.47
+data in Table \@ref(t-sex-attitude-ch4), which is larger than the 18.47
 in the “0.001” column of the table for the $\chi^{2}_{4}$ distribution.
 Thus the corresponding $P$-value must be smaller than 0.001, again
 agreeing with the correct value of $P=0.0008$.
@@ -954,7 +954,7 @@ Finally, if the null hypothesis of independence is rejected, the test
 should not usually be the only statistical analysis that is reported for
 a two-way table. Instead, we would then go on to describe *how* the two
 variables appear to be associated, using the of descriptive methods
-discussed in Section \@ref(s_descr1-2cat).
+discussed in Section \@ref(s-descr1-2cat).
 
 ## Summary of the $\chi^{2}$ test of independence {#s_tables_summary}
 
@@ -967,7 +967,7 @@ and attitude in the survey example is again used for illustration:
 1.  Data: observations of two categorical variables, here sex and
     attitude towards income redistribution for $n=2344$ respondents,
     presented in the two-way, $2\times 5$ contingency table
-    \@ref(t_sex_attitude-ch4).
+    \@ref(t-sex-attitude-ch4).
 
 2.  Assumptions: the variables can have any measurement level, but the
     expected frequencies $f_{e}$ must be large enough. A common rule of
@@ -983,7 +983,7 @@ and attitude in the survey example is again used for illustration:
     \frac{(f_{o}-f_{e})^{2}}{f_{e}}$$ where $f_{o}$ denotes observed
     frequencies in the cells of the table and $f_{e}$ the corresponding
     expected frequencies under the null hypothesis, and the summation is
-    over all of the cells. For Table \@ref(t_sex_attitude-ch4),
+    over all of the cells. For Table \@ref(t-sex-attitude-ch4),
     $\chi^{2}=18.86$.
 
 5.  The sampling distribution of the test statistic when $H_{0}$ is
@@ -1002,7 +1002,7 @@ and attitude in the survey example is again used for illustration:
 
 When the association is judged to be statistically significant, its
 nature and magnitude can be further explored using the descriptive
-methods for two way tables discussed in Section \@ref(s_descr1-2cat).
+methods for two way tables discussed in Section \@ref(s-descr1-2cat).
 
 [^1]: *Philosophical Magazine*, Series 5, **5**, 157–175.
     \label{p_pearson} The thoroughly descriptive title of the article is
