--- a/06-MY451_6.rmd
+++ b/06-MY451_6.rmd
@@ -10,9 +10,9 @@ These may appear in two distinct roles:
 -   As population distributions of continuous variables, for instance
     blood pressure in the illustrative example of this chapter. This
     contrasts with the kinds of discrete variables that were considered
-    in Chapters \@ref(c_tables) and \@ref(c-probs). Methods of inference
+    in Chapters \@ref(c-tables) and \@ref(c-probs). Methods of inference
     for continuous variables will be introduced in Chapters
-    \@ref(c_means) and \@ref(c-regression).
+    \@ref(c-means) and \@ref(c-regression).
 
 -   As sampling distributions of sample statistics. These are typically
     continuous even in analyses of discrete variables, such as in
@@ -41,7 +41,7 @@ data-label="f_bp1"></span>](bloodp1){width="13.5cm"}
 
 The respondents whose blood pressures are summarized in Figure
 \@ref(f-bp1) are in reality a sample from a larger population in the
-sense of Sections \@ref(s_samples_finpops) and \@ref(s_samples-samples).
+sense of Sections \@ref(s-samples-finpops) and \@ref(s-samples-samples).
 However, for illustrative purposes we will here pretend that they are
 actually an entire finite population of 4489 people (the adults in a
 small town, say). The values summarised in Figure \@ref(f-bp1) then form
@@ -56,7 +56,7 @@ If we knew all of its values, we could summarise a finite population
 distribution by, say, a histogram like Figure \@ref(f-bp1). We can also
 consider specific characteristics of the distribution, i.e. its
 *parameters* in the sense introduced in Section
-\@ref(s_probs-distribution). For the distribution of a continuous
+\@ref(s-probs-distribution). For the distribution of a continuous
 variable, the most important parameters are the **population mean**
 $$\mu=\frac{\sum Y_{i}}{N}
 \label{mu}$$ and the **population variance**
@@ -77,8 +77,8 @@ $\sigma^{2}=127.87$ and $\sigma=11.3$.
 Because the formulas (\@ref(mu})–(\ref{sigma)) involve the population
 size $N$, they apply in this exact form only to finite populations like
 the one in this example (and as discussed more generally in Section
-\@ref(s_samples-finpops)) but not to infinite ones of the kind discussed
-in Section \@ref(s_samples-infpops). However, the definitions of $\mu$,
+\@ref(s-samples-finpops)) but not to infinite ones of the kind discussed
+in Section \@ref(s-samples-infpops). However, the definitions of $\mu$,
 $\sigma^{2}$, $\sigma$ and other parameters can be extended to apply
 also to infinite populations. These definitions, which will be omitted
 here, involve the concept of continuous probability distributions that
@@ -99,7 +99,7 @@ s &=& \sqrt{\frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1}}
 observations in a sample. These can be used as descriptions of the
 sample distribution as discussed in Chapter \@ref(c-descr1), but also as
 *point estimates* of the corresponding population parameters in the
-sense defined in Section \@ref(s_probs-pointest). We may thus use the
+sense defined in Section \@ref(s-probs-pointest). We may thus use the
 sample mean $\bar{Y}$ as a point estimate of the population mean $\mu$,
 and the sample variance $s^{2}$ and sample standard deviation $s$ as
 point estimates of population variance $\sigma^{2}$ and standard
@@ -109,8 +109,8 @@ both finite and infinite population distributions.
 For further illustration of the connection between population and sample
 quantities, we have also drawn a simple random sample of $n=50$
 observations from the finite population of $N=4489$ observations in
-Figure \@ref(f_bp1). Table \@ref(t_bp-example) shows the summary
-statistics (\@ref(Ybar_ch6))–(\@ref(s-ch6)) in this sample and the
+Figure \@ref(f-bp1). Table \@ref(t-bp-example) shows the summary
+statistics (\@ref(Ybar-ch6))–(\@ref(s-ch6)) in this sample and the
 corresponding parameters (\@ref(mu))–(\@ref(sigma)) in the population.
 
   ------------ ---------- ---------------- --------------- ---------------------
@@ -122,11 +122,11 @@ corresponding parameters (\@ref(mu))–(\@ref(sigma)) in the population.
 
   : Summary statistics for diastolic blood pressure in the population
   and a sample from it in the example used for illustration in Sections
-  \@ref(s_contd_popdistrs)–\@ref(s_contd-clt).<span
+  \@ref(s-contd-popdistrs)–\@ref(s-contd-clt).<span
   data-label="t_bp_example"></span>
 
 You may have noticed that the formulas of the sample variance
-(\@ref(s2_ch6)) and sample standard deviation (\@ref(s-ch6)) involve the
+(\@ref(s2-ch6)) and sample standard deviation (\@ref(s-ch6)) involve the
 divisor $n-1$ rather than the $n$ which might seem more natural, while
 the population formulas (\@ref(sigma2}) and (\ref{sigma)) do use $N$
 rather than $N-1$. The reason for this is that using $n-1$ gives the
@@ -163,8 +163,8 @@ well-represented by a continuous *probability distribution*, and focus
 on inference on the parameters of that distribution.
 
 We have already introduced the concept of probability distributions in
-Section \@ref(s_samples-popdistrs), and considered instances of it in
-Chapters \@ref(c_tables} and \ref{c-probs). There, however, the term was
+Section \@ref(s-samples-popdistrs), and considered instances of it in
+Chapters \@ref(c-tables} and \ref{c-probs). There, however, the term was
 not emphasised because it added no crucial insight into the methods of
 inference. This was because for discrete variables a probability
 distribution is specified simply by listing the probabilities of all the
@@ -248,7 +248,7 @@ banknote.<span data-label="f_10dm"></span>](mark){width="14cm"}
 The normal distribution is by far the most important probability
 distribution in statistics. The main reason for this is its use as a
 sampling distribution in a wide range of contexts, for reasons that are
-explained in Section \@ref(s_contd-clt). However, the normal distribution
+explained in Section \@ref(s-contd-clt). However, the normal distribution
 is also useful for describing many approximately symmetric population
 distributions, and it is in this context that we introduce its
 properties first.
@@ -312,8 +312,8 @@ sampled unit must have *some* value of the variable in question. More
 generally, the area under the curve for a range of values gives the
 probability that the value of a randomly sampled observation is in that
 range. These are the same principles that we have already used to derive
-$P$-values for tests in Sections \@ref(ss_tables_chi2test-Pval) and
-\@ref(ss_probs_test1sample-samplingd).
+$P$-values for tests in Sections \@ref(ss-tables-chi2test-Pval) and
+\@ref(ss-probs-test1sample-samplingd).
 
 ![Illustration of probabilities for the normal distribution. The
 probability of an observation being within one standard deviation of the
@@ -463,7 +463,7 @@ and standard deviation *stddev* is **at most** *quant*.
 
 In practice we do not usually know the population mean and variance, so
 their sample estimates will be used in such calculations. For example,
-for the sample in Table \@ref(t_bp-example) we had $\bar{Y}=72.6$ and
+for the sample in Table \@ref(t-bp-example) we had $\bar{Y}=72.6$ and
 $s=12.7$. Using these values in a similar calculation as above gives the
 estimated proportion of people in the population with diastolic blood
 pressures over 90 as 8.5%. Even with a sample of only 50 observations,
@@ -473,7 +473,7 @@ about 8.1%.
 ## The normal distribution as a sampling distribution {#s_contd_clt}
 
 We have already encountered the normal distribution in Section
-\@ref(ss_probs_test1sample-samplingd), in the role of the *sampling
+\@ref(ss-probs-test1sample-samplingd), in the role of the *sampling
 distribution* of a test statistic rather than as a model for the
 population distribution of a variable. In fact, the most important use
 of the normal distribution is as a sampling distribution, because in
@@ -486,7 +486,7 @@ inference on proportions in Chapter \@ref(c-probs), and even for the
 $\chi^{2}$ sampling distribution of the $\chi^{2}$ test in Chapter
 \@ref(c-tables).
 
-Recall from Section \@ref(ss_tables_chi2test-sdist) that the sampling
+Recall from Section \@ref(ss-tables-chi2test-sdist) that the sampling
 distribution of a statistic is its distribution across all possible
 random samples of a given size from a population. The statistic we focus
 on here is the sample mean $\bar{Y}$. If we assume that the population
@@ -529,7 +529,7 @@ separately:
     more precisely, the standard error of the mean is
     $\sigma/\sqrt{n}=11.3/\sqrt{50}=1.60$ when $n=50$ and
     $11.3/\sqrt{1000}=0.36$ when $n=1000$. Recalling from Section
-    \@ref(ss_contd_probdistrs-normal) that approximately 95% of the
+    \@ref(ss-contd-probdistrs-normal) that approximately 95% of the
     probability in a normal distribution is within two standard
     deviations of the mean, this means that about 95% of samples of size
     50 in this case would give a value of $\bar{Y}$ between
@@ -561,7 +561,7 @@ level of precision required, and guesses about the variability of
 variables in the population. Statistical considerations of the
 trade-offs between them in order to make decisions about sample sizes
 are known as *power* calculations. They will be discussed very briefly
-later, in Section \@ref(ss_means_tests3-power).
+later, in Section \@ref(ss-means-tests3-power).
 
 In Figure \@ref(f-sampld) we use a computer simulation rather than a
 mathematical theorem to examine the sampling distribution of a sample
@@ -661,11 +661,11 @@ limited to such easy cases but works quite generally. To demonstrate
 this with a more severe test, let us consider a population distribution
 that is as far as possible from normal. This is the binomial
 distribution of a binary variable that was introduced in Section
-\@ref(s_probs-distribution). If the probability parameter of this
+\@ref(s-probs-distribution). If the probability parameter of this
 distribution is $\pi$, its mean and variance are $\mu=\pi$ and
 $\sigma^{2}=\pi(1-\pi)$, and the sample mean $\bar{Y}$ of observations
 from the distribution is the sample proportion $\hat{\pi}$ (see equation
-\@ref(pihat_as_ybar) on page \pageref{pihat_as-ybar}). The CLT then tells
+\@ref(pihat-as-ybar) on page \pageref{pihat-as-ybar}). The CLT then tells
 us that
 
 -   When $n$ is large enough, the sampling distribution of the sample
